# ai-2026

./: LICENSE  README.md  glm-ocr-demo.py  main.py  ollama-chat-demo.py  pyproject.toml
llm/: glm_ocr.py  model_chat.py
notify/: telegram.py
